--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             height: 39px;
             line-height: 39px;
             padding: 0 20px;
-            background: #32B0ED;
+            background: #32ed77;
             color: #fff;
             font-weight: 600;
             text-transform: uppercase;
@@ -251,8 +251,8 @@
                 <p class="gray-text">4,021 subscribers</p>
                 <p class="info-text"> <img src="./School of Finance_files/default-user.png" class="user-icon" alt=""> Forex, Metals, Indexes <br><br>Calls with proper Technical analysis</p>
                 <p class="Link-channer "> <img src="./School of Finance_files/tick.png" class="user-icon" alt=""> Unlock the power of profitable Forex Trading with us</p>
-                <a id="contactButton" href="https://t.me/finxeropublicchannel" class="view-btn" target="_blank" rel="noopener noreferrer"> View in telegram</a>
-                <p class="info-link-text">if you have <strong>Telegram</strong> you can view and join <a href="https://t.me/finxeropublicchannel" class="avitor-link avitor-icon-link" target="_blank" rel="noopener noreferrer"> <img src="image.svg" class="user-icon" alt=""></a> right away.</p>
+                <a id="contactButton" href="https://chat.whatsapp.com/BntV5bhLxAeKwrAf9hEBeh" class="view-btn" target="_blank" rel="noopener noreferrer"> View in Whatsapp</a>
+                <p class="info-link-text">if you have <strong>Whatsapp</strong> you can view and join <a href="https://chat.whatsapp.com/BntV5bhLxAeKwrAf9hEBeh" class="avitor-link avitor-icon-link" target="_blank" rel="noopener noreferrer"> <img src="image.svg" class="user-icon" alt=""></a> right away.</p>
             </div>
         </div>
     
