--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 </style></head>
     <body data-new-gr-c-s-check-loaded="14.1120.0" data-gr-ext-installed="" cz-shortcut-listen="true">
         <div class="blue-header">
-            don't have <strong>Telegram</strong> yet? Try it now!
+            don't have <strong>Whatsapp</strong> yet? Try it now!
         </div>
         <div class="team-logo-wrapper">
             <div class="team-logo" style="background: url(&#39;new_logo.jpg&#39;);">
